@@ -12,6 +12,8 @@ Next release
   Configurator constructor unconditionally registered one that would be
   treated as if it were "the word of the user".
 
+- A session factory can now be passed in using the dotted name syntax.
+
 1.2a1 (2011-08-24)
 ==================
 
